--- a/frontend/contact-address-app/package.json
+++ b/frontend/contact-address-app/package.json
@@ -10,8 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.8",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^7.0.1",
+    "react-spinners": "^0.14.1",
+    "react-toastify": "^10.0.6",
+    "styled-components": "^6.1.13",
+    "sweet": "^0.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
